# cuelight

./: .gitignore  CONTRIBUTING.md  PLAN.md  README.md  SPEC.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
agents/: adversarial-reviewer.agent.json  docs-writer.agent.json  ideation-lead.agent.json  implementer.agent.json  issue-triager.agent.json  lifecycle-monitor.agent.json  refactor-surgeon.agent.json  repo-scout.agent.json  security-reviewer.agent.json  test-engineer.agent.json
design/: README.md  ui-spec.html
media/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
media/src/: Banner.tsx  GifLoop.tsx  Root.tsx  fonts.ts  graph.tsx  scenes1.tsx  scenes2.tsx  theme.ts  ui.tsx
schema/: agent.schema.json  stage.schema.json
scripts/: smoke-test.mjs
src/: App.tsx  theme.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  procjob.rs  quiet.rs
src-tauri/src/adapters/: claude.rs  grok.rs  mod.rs
src-tauri/src/conductor/: engine.rs  journal.rs  mod.rs  quota.rs  scheduler.rs  stage.rs
src/canvas/: StageCanvas.tsx  nodes.tsx
src/lib/: diff.test.ts  diff.ts  git.ts  graph.ts  layout.ts  store.ts  text.ts
src/run/: HistoryView.tsx  ReviewView.tsx  replay.ts  useRun.ts
src/ui/: MenuBar.tsx  Select.tsx  panes.ts
templates/: README.md  bug-hunt.stage.json  docs-sync.stage.json  nightly-refactor.stage.json  oss-contributor.stage.json  pr-babysitter.stage.json  ship-a-feature.stage.json  test-coverage.stage.json
